# MangMayTinh

./: .gitignore  Full_Chat_Log.txt  README.md  client.py  pyproject.toml  server.py
client/: main.py
client/core/: base.py  network.py
client/resources/data/: servers.json
client/ui/: activity_logs.py  control_menu.py  dashboard.py  file_explorer.py  live_control.py  media_manager.py  process_manager.py  system_apps.py
client_package/: run_client_for_linux.sh  run_client_for_win.bat
client_package/client/core/: network.py
client_package/client/resources/data/: servers.json
client_package/client/ui/: activity_logs.py  control_menu.py  media_manager.py  process_manager.py  system_apps.py  widgets.py
document/: AI_log_to_Long.md  Demo_Speech.md  Full_Technical_Solutions.md  Technical_Report.md
server/: main.py
server/commands/: __init__.py  files.py  logs.py  media.py  system.py
server/core/: logic.py  registry.py
server/resources/certs/: server.crt  server.key
server/ui/: server_window.py
server_package/: pyproject.toml  run_server_for_linux.sh  run_server_for_win.bat
server_package/server/: main.py
server_package/server/commands/: logs.py  media.py  system.py
server_package/server/core/: registry.py
server_package/server/ui/: server_window.py
tests/: test_features.py
