[project]
name = "mangmaytinh"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pyqt5>=5.15.11",
]

[tool.uv]
# Force an older pyqt5-qt5 on Windows (newer versions have no win_amd64 wheel)
constraint-dependencies = [
    "pyqt5-qt5==5.15.2 ; sys_platform == 'win32'",
]
